MB-58893: Extract collection size logic from tryAndScheduleOSOBackfill

And move it to the Collections::VB::Filter class, to make it easier to
write a unit test against.

Change-Id: Ie15fe38916a9e960cb396fdff7153a05811db377
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/198497
Tested-by: Vesko Karaganev <vesko.karaganev@couchbase.com>
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>